--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Outer Space</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <!-- HEADER -->
     <header>
       <div class="header">
         <div class="logoContainer">
-          <img src="/assets/LogoWithText.png" alt="" />
+          <img src="./assets/LogoWithText.png" alt="" />
         </div>
       </div>
     </header>
@@ -20,7 +20,7 @@
     <!-- MASTHEAD -->
 
     <div class="masthead">
-      <img class="spaceImage" src="/assets/SpaceImage.png" alt="" />
+      <img class="spaceImage" src="./assets/SpaceImage.png" alt="" />
     </div>
 
     <!-- PRODUCTS -->
@@ -28,7 +28,7 @@
     <div class="productContainer">
       <div class="item">
         <div class="itemImageContainer">
-          <img class="itemImage" src="/assets/Hoodie.png" alt="" />
+          <img class="itemImage" src="./assets/Hoodie.png" alt="" />
         </div>
         <div class="itemInfoContainer">
           <h3 class="itemName">Hoodie</h3>
@@ -36,12 +36,12 @@
           <p class="itemDescription">
             Alien Hoodie Made from 100% recycled martian plastic from Mars!
           </p>
-          <img src="/assets/BuyButton.png" alt="" />
+          <img src="./assets/BuyButton.png" alt="" />
         </div>
       </div>
       <div class="item">
         <div class="itemImageContainer">
-          <img class="itemImage" src="/assets/Tshirt.png" alt="" />
+          <img class="itemImage" src="./assets/Tshirt.png" alt="" />
         </div>
         <div class="itemInfoContainer">
           <h3 class="itemName">T-shirt</h3>
@@ -49,12 +49,12 @@
           <p class="itemDescription">
             Holy shit have you seen this t-shirt? Made from real Venushair©
           </p>
-          <img src="/assets/BuyButton.png" alt="" />
+          <img src="./assets/BuyButton.png" alt="" />
         </div>
       </div>
       <div class="item">
         <div class="itemImageContainer">
-          <img class="itemImage" src="/assets/Hat.png" alt="" />
+          <img class="itemImage" src="./assets/Hat.png" alt="" />
         </div>
         <div class="itemInfoContainer">
           <h3 class="itemName">Hat</h3>
@@ -62,7 +62,7 @@
           <p class="itemDescription">
             Is there a better way to tell people you like aliens? Made in space
           </p>
-          <img src="/assets/BuyButton.png" alt="" />
+          <img src="./assets/BuyButton.png" alt="" />
         </div>
       </div>
     </div>
@@ -91,9 +91,9 @@
 
     <div class="footer">
       <div class="socialMedia">
-        <img src="/assets/Facebook.png" alt="" />
-        <img src="/assets/Twitter.png" alt="" />
-        <img src="/assets/Instagram.png" alt="" />
+        <img src="./assets/Facebook.png" alt="" />
+        <img src="./assets/Twitter.png" alt="" />
+        <img src="./assets/Instagram.png" alt="" />
       </div>
       <p class="footerText">
         Outer Space is a high-fashion brand. We are NOT accountable for any type
